--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-pandas>=1.5.0
-numpy>=1.21.0
-schedule>=1.1.0
-requests>=2.28.0
-python-telegram-bot>=20.0
+pandas
+numpy
+schedule
+requests
+python-telegram-bot
+websocket-client
+schedule
+scikit-learn
+ta-lib
+psutil
