--- a/config.json
+++ b/config.json
@@ -3,10 +3,9 @@
         "EURUSD",
         "GBPUSD",
         "USDJPY",
-        "USDCHF",
         "USDCAD",
         "AUDUSD",
-        "NZDUSD",
+        "EURCAD",
         "EURGBP",
         "EURJPY",
         "GBPJPY"
